asignacion de permisos de aprobacion y validacion y excepciones de token
